# Floppy

./: .ccb-ducc-ccb  .env  .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
data/: ai_planner_smoke.db  ai_planner_smoke_demo.db  ai_planner_smoke_demo_v2.db  floppy.db  minimax_smoke.db  minimax_smoke_20260621204740.db  minimax_smoke_cn.db  today_workflow.db
docs/: README.md  asmr_ambient_skill_review.md  backend_algorithm_research.md  development_log.md  minimax_audio_workflow.md  minimax_official_deep_research.md
docs/architecture/: backend_algorithm_flow.md
docs/contracts/: backend_p0_api.md  hermes_agent_runtime.md  voice_dialog_ws.md  voice_dialog_ws_backend.md
docs/frontend/: android_client_guide.md  backend_api_reference.md  demo_integration.md
docs/logs/: development_log.md
docs/qa/: agent_decision_acceptance.md
docs/research/: agent_framework_eval_algo.md  minimax_audio_workflow.md  tts_vendor_research.md  user_profile_design.md
floppy_backend/: catalog.py  config.py  db.py  demo_page.py  main.py  mcp_server.py  models.py  repositories.py  seed.py  storage.py  utils.py  voice_page.py  voice_profiles.py  voice_script.py
floppy_backend/providers/: audio.py  volc_asr.py
hermes/: README.md
scripts/: demo_chat.py  fetch_real_audio.py  minimax_smoke.py  pregen_catalog.py  prewarm_cache.py  volc_asr_smoke.py
tests/: conftest.py  test_agent_runtime.py  test_asset_catalog.py  test_backend_smoke.py  test_hermes_skills.py  test_mvp_flow.py  test_query_planner.py  test_script_guard.py  test_voice_session.py
(+30 files in other folders)
